# csdbg-automake

./: AUTHORS  Makefile  Makefile.am  README.md  configure  configure.ac  doxygen.cfg
example/: AUTHORS  Makefile  Makefile.am  configure  configure.ac
example/src/: hello.cpp  hello.h
include/: csdbg.hpp
